--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ title: Home
               {{ post.title }}
             </a>
             {% else %}
-            <a href="{{ post.url }}">
+            <a href="{{ site.url }}{{ post.url }}">
               {{ post.title }}
             </a>
             {% endif %}
@@ -32,7 +32,7 @@ title: Home
             Read more...
           </a>
           {% else %}
-          <a href="{{ post.url }}">
+          <a href="{{ site.url }}{{ post.url }}">
             Read more...
           </a>
           {% endif %}
